@@ -21,10 +21,10 @@
 					"uplay_name": "zxc_GS",
 					"bage": {
 						"background": "ui_playercard_4",
-						"rank_image_side": "left",
-						"text_color": "#000000",
+						"rank_image_side": "right",
+						"text_color": "#e1ff00",
 						"text_border": "transparent",
-						"bage_border": "#FF0000"
+						"bage_border": "#ff0000"
 					},
 					"permanent_link": "https://r6.tracker.network/profile/id/2a33ccb1-2a86-4a1a-937d-8392219249e1"
 				},
