@@ -13,7 +13,7 @@
     font-family: Comfortaa;
 }
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
 }
 
 /* Track */
@@ -218,6 +218,10 @@ img {
 #save_btn:hover {
     box-shadow: 0 -2px 10px #ed0200,
                 0 2px 10px #d50082;
+}
+#save_btn.saved {
+    box-shadow: 0 -2px 20px #ed0200,
+    0 2px 20px #d50082;
 }
 .library .container {
     padding: 10px 10px 15px;
