@@ -5,6 +5,7 @@
 В мониторинге профиль может не существовать в базе, нужно это учесть
 Если профиль удален из статистики, то нужно удалять его бейдж из локального хранилища
 -- FEATURES
+ADD 404 PAGE
 Кастомизация ширины линии обводки в бейджах
 Мобильную версию сайта
 Добавить сброс таймеров для статистики
